# sRenderer

./: .gitignore  CMakeLists.txt  Makefile  README.md
inc/: geometry.hpp  model.hpp  renderer.hpp  shader.hpp
src/: geometry.cpp  main.cpp  model.cpp  renderer.cpp  shader.cpp  tgaImage.cpp
